# electron-project

./: .gitignore  README.md  pyproject.toml
src/plasma_sim/: constants.py  losses.py
tests/: test_losses.py
